infrastructure/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  rules:
    - host: auction-api
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: auction-api
                port:
                  number: 8080
    - host: identity-api
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: identity-api
                port:
                  number: 8080
    - host: search-api
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: search-api
                port:
                  number: 8080
